[gd_scene load_steps=3 format=3 uid="uid://dqdqxekg84bdn"]

[ext_resource type="Script" uid="uid://cdqqebyfwlm7w" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="PackedScene" uid="uid://dkbfuoprv4dgm" path="res://bg.tscn" id="2_ouk20"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="BG" parent="." instance=ExtResource("2_ouk20")]
scroll_offset = Vector2(1, 5)

[node name="NewGame" type="Button" parent="."]
offset_left = 387.0
offset_top = 104.0
offset_right = 738.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 50
text = "New game"

[node name="continue" type="Button" parent="."]
offset_left = 387.0
offset_top = 227.0
offset_right = 738.0
offset_bottom = 329.0
theme_override_font_sizes/font_size = 50
text = "Ð¡ontinue"

[node name="quit" type="Button" parent="."]
offset_left = 387.0
offset_top = 363.0
offset_right = 738.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
